[package]
name = "entropy-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.4"
parking_lot = "0.12.1"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
sled = "0.34.7"
thiserror = "1.0.50"
zerocopy = "0.7.31"
zerocopy-derive = "0.7.31"
zmq = "0.10.0"
