[package]
name = "entropy-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["alloc"] }
bincode-sled = "0.0.2"
builder_macro = "0.5.1"
config = "0.13.4"
enum_dispatch = "0.3.12"
parking_lot = "0.12.1"
paste = "1.0.14"
rayon = "1.8.0"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
sled = "0.34.7"
thiserror = "1.0.50"
zerocopy = "0.7.31"
zerocopy-derive = "0.7.31"
zmq = "0.10.0"

