[package]
description = "Game in rust."
edition = "2021"
license = "MIT"
name = "entropy-rs"
version = "0.2.0-alpha.3"
homepage = "https://entropy.press"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = {version = "2.0.0-rc.3", features = ["alloc"]}
bincode-sled = "0.0.2"
builder_macro = "0.5.1"
config = "0.13.4"
parking_lot = "0.12.1"
rayon = "1.8.0"
rustc-hash = "1.1.0"
sensible-dbg = "0.1.1"
signal-hook = "0.3.17"
sled = "0.34.7"
thiserror = "1.0.50"
zmq = "0.10.0"
